[tool.poetry]
name = "machainst"
version = "0.1.0"
description = ""
authors = ["Craig Vear <craig.vear@nottingham.ac.uk>, Fabrizio Poltronieri <fabrizio@fabriziopoltronieri.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mingus = "^0.6.1"
hid = "^1.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
