[tool.poetry]
name = "joyinst"
version = "0.1.0"
description = ""
authors = ["Craig Vear <Craig.Vear@nottingham.ac.uk>, Fabrizio Augusto Poltronieri <fabrizio@fabriziopoltronieri.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
pygame = "^2.5.2"
typing-extensions = "^4.9.0"
pyfluidsynth = "^1.3.3"
mingus = "^0.6.1"
pandas = "^2.2.2"
toml = "^0.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
